# CookieKiss-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Asset/Shaders/: raytrace.comp.glsl.spv
Asset/cube/: cube.glb
Src/: CMakeLists.txt  HelloCookieKissEngine.cpp
Src/Core/: util.h
Src/Demo/: CMakeLists.txt
Src/Demo/RaytraceDisplacement/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp  raytracing_vk.hpp
Src/Demo/RaytraceDisplacement/Shaders/: animate_heightmap.comp  animate_heightmap.h  device_host.h  dh_bindings.h  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  payload.h
Src/Demo/RaytraceDisplacement/Shaders/spirv/generated_spirv/: animate_heightmap_comp.h  pathtrace_rchit.h  pathtrace_rgen.h  pathtrace_rmiss.h
Src/Demo/SVGF/: AssetLoader.h  CMakeLists.txt  OnlineShaderCompiler.h  Scene.h  arch.drawio  main.cpp
Src/Demo/SVGF/Shader/: SimpleGraphicsTest.frag  SimpleGraphicsTest.vert  common.h
Src/Demo/SVGF/Shader/spv/: simpleFrag.h  simpleVert.h
Src/Demo/StreamlineDLSS/: CMakeLists.txt  README.md  main.cpp  streamline_wrapper.hpp
Src/Demo/StreamlineDLSS/Shaders/: common.h  post.frag  post.vert  scene.frag  scene.vert
Src/Demo/StreamlineDLSS/Shaders/spirv/generated_spirv/: post_frag.h  post_vert.h  scene_frag.h  scene_vert.h
Src/Demo/VulkanMiniPatchTracer/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp
Src/Demo/VulkanMiniPatchTracer/Shaders/: raytrace.comp.glsl  raytrace.comp.glsl.spv  test.vert
